--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -1,5 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
-<script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js">
+</script>
 
 <div id="nuevo_estante" class="modal hide fade">
       <div class="modal-header">
