--- a/intranet/htdocs/intranet-tmpl/estantes/verDetalleEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/verDetalleEstante.tmpl
@@ -1,5 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
-<script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js">
+</script>
 
 
 <div id="editar_estante" style="display:none">
