--- a/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/prestamoInterBiblio-export.tmpl
@@ -4,6 +4,7 @@
 
 <fieldset class="">
             <div class="encabezado">
+                <img src="[% escudo %]" alt="escudo" width="80px" height="100px" /><img src="[% escudoUI %]" alt="escudoUI" width="120px" height="90px" align="right" /><br>
                 [% biblio.titulo_formal %]<br>
                 [% "BIBLIOTECA" | i18n  %]<br>
                 [% biblio.getNombrePDF %]<br><br><br>
