--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -48,7 +48,7 @@ function cambiarFiltro (filtro){
 				</li>
 			    
 			    <li [% IF record_filter == 'IGNORED' %] class="active" [% END %]>
-				<a href="#E" onClick="cambiarFiltro('IGNORED');">Registros Ignorados</a>
+				<a href="#E" onClick="cambiarFiltro('IGNORED');">Registros Ignorados o Err&oacute;neos</a>
 				</li>
             </ul>
             
