FIX edicion grupal nivel 3

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel2.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel2.tmpl
@@ -44,7 +44,7 @@
                 
             </div>
                 <dl>
-                     <dt class="inline left rightMargin">[% 'Edici&oacute;n:' | i18n %]:&nbsp;</dt> 
+                     <dt class="inline left rightMargin">[% 'Edici&oacute;n:' | i18n %]&nbsp;</dt> 
                      <dd>[% nivel2.getEdicion %]&nbsp;</dd>
                 
                      <dt class="inline left rightMargin">[% 'Fecha:' | i18n %]</dt>
