--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -253,7 +253,8 @@ body {
 }
 
 .loading_items{
-    width: 800px;
+    max-width: 800px;
+    width: 80%;
     margin: 0 auto;
     padding-top: 50px;
 }
