--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -13,44 +13,46 @@ function objeto_usuario(){
 function guardarCambiarPassword(){
 
      [% IF plainPassword == 0 %]
-         var nroRandom   = [% nroRandom %];
-         var hash_actual = b64_sha256(b64_sha256(b64_md5($("#actualpassword").val()))+nroRandom);
-         var key         = b64_sha256(b64_md5($("#actualpassword").val()));
-         var hash_new1   = encriptar(b64_md5($("#newpassword1").val()),key);
-         var hash_new2   = encriptar(b64_md5($("#newpassword2").val()),key);
+        var nroRandom   = [% nroRandom %];
+        var hash_actual = b64_sha256(b64_sha256(b64_md5($("#actualpassword").val()))+nroRandom);
+        var key         = b64_sha256(b64_md5($("#actualpassword").val()));
+        var hash_new1   = encriptar(b64_md5($("#newpassword1").val()),key);
+        var hash_new2   = encriptar(b64_md5($("#newpassword2").val()),key);
+         
+        //checkeo que las pass nuevas sean iguales
+        if(desencriptar(hash_new1, key) != desencriptar(hash_new2, key))
+        {
+            jAlert('Por favor verifique que las nuevas passwords sean iguales');
+            return false;
+        }
 
-         $("#actual_password").val(hash_actual);
-         $('#new_password1').val(hash_new1);
-         $('#new_password2').val(hash_new2);
+        $("#actual_password").val(hash_actual);
+        $('#new_password1').val(hash_new1);
+        $('#new_password2').val(hash_new1);
      [% ELSE %]
-	     var hash_actual = $("#actualpassword").val();;
-         var hash_new1   = $("#newpassword1").val();
-         var hash_new2   = $("#newpassword2").val();
-	     $("#actual_password").val(hash_actual);
-	     $('#new_password1').val(hash_new1);
-	     $('#new_password2').val(hash_new2);
-     [% END %]
-     $("#datosAEnviar").submit();
-     return true;
+        var hash_actual = $("#actualpassword").val();;
+        var hash_new1   = $("#newpassword1").val();
+        var hash_new2   = $("#newpassword2").val();
+        $("#actual_password").val(hash_actual);
+        $('#new_password1').val(hash_new1);
+        $('#new_password2').val(hash_new2);
+    [% END %]
+    $("#datosAEnviar").submit();
+    return true;
     startOverlay();
-}
-
-function updateGuardarCambiarPassword(responseText){
-    var Messages= JSONstring.toObject(responseText);
-    setMessages(Messages);
-}
+    }
 
 $(document).ready(function() {
     
-    usuario= new objeto_usuario();
-    usuario.text= "[% completo %]";
-    usuario.ID= "[% nro_socio %]";
+    usuario         = new objeto_usuario();
+    usuario.text    = "[% completo %]";
+    usuario.ID      = "[% nro_socio %]";
 
 });
 
 </script>
 
-<form action='[% url_prefix %]/usuarios/change_passwordDB.pl' method="POST" name="datosAEnviar" id="datosAEnviar">
+<form action="[% url_prefix %]/usuarios/change_passwordDB.pl" method="POST" name="datosAEnviar" id="datosAEnviar">
         <input type="hidden" name="new_password1" id="new_password1" value="">
         <input type="hidden" name="new_password2" id="new_password2" value="">
         <input type="hidden" name="usuario" id="usuario" value="[% nro_socio %]">
@@ -60,25 +62,26 @@ $(document).ready(function() {
 </form>
 
 [% IF cambioForzado %]
+
     <fieldset>
-      <legend class="titulo_legend">[% 'Cambio de contrase&ntilde;a obligatorio' | i18n %]</legend>
-      <p class="warning">
-          [% 'Para su seguridad, es obligatorio que cambie su contrase&ntilde;a actual.' | i18n %]
-          [% 'Disculpe las molestas. MERAN' | i18n %]
-      </p>
+        <legend>[% 'Cambio de contrase&ntilde;a obligatorio' | i18n %]</legend>
+            <div class="alert alert-error">
+                [% 'Para su seguridad, es obligatorio que cambie su contrase&ntilde;a actual. Disculpe las molestas. MERAN' | i18n %]
+            </div>
     </fieldset>
+    
 [% END %]
 
 <fieldset>
     
     <legend class="titulo_legend">[% 'Cambio de contrase&ntilde;a' | i18n %]</legend>
       <section class="center-section-form">
-       <form class="form-horizontal" onsubmit="false;">
+       <form class="form-horizontal" onsubmit="return false;">
           
              <div class="control-group">
                            <label class="control-label" for="actualpassword">[% "Contrase&ntilde;a Actual" | i18n %]</label>
                            <div class="controls">
-                                    <input type="password" class="input focused" id="actualpassword" name="actualpassword" tabindex="1">
+                                    <input type="password" autofocus class="input focused" id="actualpassword" name="actualpassword" tabindex="1">
                            </div>
               </div>
               <div class="control-group">
