--- a/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
@@ -251,7 +251,8 @@ function MultiSelector( list_target, max ){this.list_target = list_target;this.c
                         <div id="imagesList"></div>
                         
                     </div>
-                
+                    <input type="hidden" id="action" name="action" value="agregar">
+                    
                 [% END %]
             
                 <input type="hidden" id="token" name="token" value="[% token %]">
