--- a/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
@@ -14,7 +14,7 @@ var objAH;//Objeto AjaxHelper.
  * Actualizacion de los datos despues de una consulta ajax. El resultado se inserta en el div result.
  */
 function updateInfoConsulta(responseText){
-	$("#divResultado").html(responseText);
+	$("#result").html(responseText);
 	if(objAH.funcion == 1){
 		tablaOrdenada();
 	}
@@ -284,7 +284,7 @@ function buscarPreferencia(){
 
 function updateBuscarPreferencia(responseText){
 	mostrarCombos();
-	$("#divResultado").html(responseText);
+	$("#result").html(responseText);
 	tablaOrdenada();
 }
 
@@ -306,10 +306,6 @@ function modificarVariable(variable,tipo){
 	borrarDiv();
 	ocultarCombos();
 
-	//compo.attr("disabled","disabled");
-	//$("#tabla").remove();
-	//$("#campo").remove();
-	//$("#categoria").remove();
 
 	objAH=new AjaxHelper(updateModificarVariable);
 	objAH.debug= true;
@@ -321,7 +317,7 @@ function modificarVariable(variable,tipo){
 }
 
 function updateModificarVariable(responseText){
-	$("#divResultado").html(responseText);
+	$("#result").html(responseText);
 }
 
 /*
@@ -382,11 +378,11 @@ $(document).ready( function() {
 
 </script>
 
-<div class="titulos"></div>
-<fieldset>
-    <legend> [% "Administraci&oacute;n de Preferencias del Sistema" | i18n %] </legend>
-    <form class="well form-search" onsubmit="return false">
+<div class="titulos">
+    <h3> [% "Administraci&oacute;n de preferencias del Sistema" | i18n %]</h3>
+</div>
 
+<form class="well form-search" onsubmit="return false">
             <input type="text" id="buscar" name="buscar" >
             
               [% PERL %]
@@ -407,10 +403,9 @@ $(document).ready( function() {
 	                                        ) ;
 	            [% END %]
 	            
-    </form>
-</fieldset>
+</form>
 
-<div id="divResultado" style="clear: both;"></div>
+<div id="result"></div>
 
 
 [% INCLUDE "intranet-bottom.inc" %]
