--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/configurar_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/configurar_importacion.tmpl
@@ -173,7 +173,6 @@ function eleccionSubCampo(){
                                         ) ;
             [% END %]
     </div>
-  </div>
-</div>
+</section>
 
 [% INCLUDE "intranet-bottom.inc" %]
