--- a/intranet/htdocs/intranet-tmpl/admin/portada_opac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/portada_opac.tmpl
@@ -5,7 +5,7 @@
 <script type="text/javascript">
 
         function submitForm(){
-            $('#post_novedad_form').modal('hide');
+            $('#add_cover_form').modal('hide');
             startOverlay();
             $('#post_novedad_form').submit();
         }
@@ -113,7 +113,10 @@
 
 <div class="alert alert-block">
         <h4 class="alert-heading">Atenci&oacute;n</h4>
-        <p>Cargue fotos exactamente  del mismo tama&ntilde;o, de lo contrario, la portada va a sufrir cambios de tama&ntilde;o, provocando molestia visual.</p>
+        <p>[% 'Cargue fotos exactamente  del mismo tama&ntilde;o, de lo contrario, la portada va a sufrir cambios de tama&ntilde;o, provocando molestia visual' | i18n %].
+            <br />
+           [% 'El tama&ntilde;o &oacute;nptimo para una correcta portada es de un m&aacute;ximo de 1200x400 px (manteniendo el aspecto)' | i18n %]
+           </p>
       </div>
 <div id="add_cover_form" class="modal hide fade" >
     [% INCLUDE 'form_portada_opac.inc' %]
