--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
@@ -157,7 +157,7 @@
 [% END %]<!-- END FOREACH Nivel 2-->
 </div> <!-- Fin DIV class="tab-pane fade in active" id="VP" -->
 
-    <div class="tab-pane fade" id="RO">
+        <div class="tab-pane fade" id="RO">
                 <pre>
                     [% registro_importacion.getRegistroMARCOriginal.as_formatted %]
                 </pre>
@@ -173,14 +173,14 @@
                 [% END %]
         </div>
 
-  <div class="tab-pane fade" id="RR">
+        <div class="tab-pane fade" id="RR">
                 <pre>
                     [% registro_importacion.getRegistroMARCResultado.as_formatted %]
                 </pre>
         </div>
 
 
-        </div>
+      </div>
     </div>
-    </div>
+ </section>
 </fieldset>
