--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -2,9 +2,8 @@
 @import url("/includes/bootstrap/css/bootstrap-responsive.css");
 @import url("/includes/css/nanoscroller.css");
 
-
 .alert-success blockquote{
-	border-left:5px solid #DFF0D8 !important; 
+    border-left:5px solid #DFF0D8 !important; 
 }
 
 .title{
@@ -17,7 +16,7 @@
 }
 
 legend {
-	font-size: 16.5px;
+    font-size: 16.5px;
 }
 
 body {
@@ -41,31 +40,35 @@ body {
     width: 90%;
 }
 
+.span98 {
+    width: 98%;
+}
+
 .span330 {
     width: 330px;
 }
 
+
 .bigInput{
-	height: 32px;
-	font-size: 23px;
-	color: #999;
+    height: 32px;
+    font-size: 23px;
+    color: #999;
 }
 
 .logo_opac_menu{
-	float: left;
-	line-height:0;
-	max-width: 150px;
-	margin-top: 5px;
-	margin-left: 5px;	
+    float: left;
+    line-height:0;
+    max-width: 150px;
+    margin-top: 5px;
+    margin-left: 5px;   
 }
 
 .main_content {
   padding-top: 60px;
-  width: 93% !important;
 }
 
 .medium_font{
-	font-size: 40px !important;
+    font-size: 40px !important;
 }
 
 .inline{
@@ -86,7 +89,7 @@ body {
 
 #last_new{
     background-color: #DFF0D8;
-    border-radius: 4px;	
+    border-radius: 4px; 
 }
 
 #last_new h2, #last_new p{
@@ -267,11 +270,11 @@ body {
 /* FIN LOADERS */
 
 .side_bar{
-	position: fixed;
-	top: 143px;
-	width: 80px !important;
-	height: 90%;
-	overflow: auto;	
+    position: fixed;
+    top: 143px;
+    width: 80px !important;
+    height: 90%;
+    overflow: auto; 
 }
 
 .listaUsuarioLeft{
@@ -280,29 +283,19 @@ body {
 }
 
 .mid-center{
-	margin: 0 auto;
-	width: 200px;
+    margin: 0 auto;
+    width: 200px;
 }
 
 .book_cover{
-	margin-left:22px;
+    margin-left:22px;
 }
 
 .nano .content      { padding: 1px; }
 .nano .pane         { background: #444; }
 
-
-
-#signin{
-         min-width: 500px; 
-}
-
-#form-actions-signin{
-          min-width: 500px;
-}
-
 #fotoUsuario{
-	width: 200px;
-	float: right;
-
+    width: 200px;
+    float: right;
 }
+
