--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaVisualizacionIntra.tmpl
@@ -85,7 +85,7 @@
                         <td>[% campo.getSubCampo %]</td>
                         <td class="pre" id="[% campo.id %]">[% campo.getPre %]</td>
                         <td class="editable" id="[% campo.id %]">[% campo.getVistaIntra %]</td>
-                        <td id="[% campo.id %]">[% campo.getPost %]</td>
+                        <td class="post" id="[% campo.id %]">[% campo.getPost %]</td>
                         <td id="[% campo.id %]">[% campo.getNivel %]</td>
                         <td style="width: 110px;">
                             [% PERL %]
