--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -52,7 +52,7 @@
                             </td>
                             <td>
                                <a href="#" onclick="showDirectMessage([% mensaje.id%])">
-                                    [% HTML.escape(mens.getAsunto) %]
+                                    [% HTML.escape(mensaje.getAsunto) %]
                                </a>
                             </td>
                             <td>
