--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -259,7 +259,7 @@
                   
              </div>
          </div>
-     <div class="form-actions" id="actions_ejemplares_[% id2 %]">
+     <div class="form-actions" id="actions_ejemplares_[% id2 %]" style="margin-bottom: 0;">
                <td>
                 [% "Para los elementos que est&aacute;n marcados:" | i18n %]
                   [% PERL %]
