--- a/intranet/htdocs/intranet-tmpl/admin/global/ver_novedad_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/ver_novedad_intra.tmpl
@@ -8,7 +8,6 @@
   <p>[% HTML.escape(novedad.getContenido) %]</p>
   
   [% IF cant_links %]
-    <p><strong>Links: </strong></p>
     [% FOREACH link IN links %]
         <a target="_blank" href="[% link %]">[% link %]</a></br>      
     [% END %]
@@ -16,5 +15,16 @@
   
 </div>
 <div class="modal-footer">
-   <h4> [% novedad.getFechaLegible %]</h4>
+    <span class="label right" title="[% 'Categor&iacute;a' | i18n %]">[% novedad.getCategoria %]</span>
+   <h4>[% novedad.getFechaLegible %]</h4>
+  <p class="help-block">
+        [% 'Creado por ' | i18n %]
+        [% PERL %]
+            print C4::AR::Filtros::link_to(   text =>     "[% novedad.getUsuario %]",
+                                              url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
+                                              params =>   ["nro_socio=[% novedad.getUsuario %]"],
+                                              title =>    "[% 'Mostrar Detalle del Usuario' | i18n %]"
+                                        );
+        [% END %]
+    </p>        
 </div>
