nevos formularios de subir archivos

--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
@@ -140,7 +140,7 @@
                </div> 	      
 
              <div class="form-actions">
-               <input type="button" class="btn btn-primary" onclick="uploadFile('[% url_prefix %]/herramientas/importacion/subirNuevaImportacion.pl')" value="[% 'Subir' | i18n %]" />
+               <input type="button" class="btn-large btn-primary" onclick="uploadFile('[% url_prefix %]/herramientas/importacion/subirNuevaImportacion.pl')" value="[% 'Subir' | i18n %]" />
              </div>
 
 
