varios change password

--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -21,8 +21,7 @@
                                           selectAll_id    => "",
                                           columns         => ['[% "Fecha"|i18n %]','[% "Usuario"|i18n %]',
                                                             '[% "T&iacute;tulo"|i18n %]', '[% "Resumen"|i18n %]',
-                                                            '[% "Categor&iacute;a"|i18n %]', '[% "Links"|i18n %]',
-                                                            '[% "Eliminar"|i18n %]', '[% "Editar"|i18n %]',
+                                                            '[% "Categor&iacute;a"|i18n %]', '[% "Acciones"|i18n %]'
                                                              ]
              
                                                 ) ;
@@ -54,34 +53,29 @@
                                 <td>
                                     [% novedad.getCategoria %]
                                 </td>
-                                <td>
-                                    [% novedad.getLinks %]
-                                </td>
-                                <td>
+                                
+                                <td style="width:150px">
                                 
                                     [% PERL %]
-                                      print C4::AR::Filtros::action_button( 
-                                                                      button    => "btn click btn-danger",
-                                                                      action    => 'eliminarNovedad("[% novedad.id %]")', 
-                                                                      icon      => "icon-white icon-remove",
-                                                                      title     => "",
-                                                                  ) ;
+                                        print C4::AR::Filtros::action_set_button(    
+                                              title   => " [% 'Editar' | i18n %]",
+                                              button  => 'btn btn-primary',
+                                              url     => "[% url_prefix %]/admin/global/editar_novedad_intra.pl",
+                                              params  =>  ["id=[% novedad.id %]"],
+                                              icon    => "icon-white icon-edit",
+                                              actions         => [
+                                                                  { title   => "Eliminar", 
+                                                                    action  => 'eliminarNovedad("[% novedad.id %]")', 
+                                                                    icon    => "icon-remove",
+                                                                   },
+                                                                  ],
 
-
+                     
+                                                ) ;
                                     [% END %]
+                            
                                 </td>
-                                <td>
-                                    [% PERL %]
-                                          print C4::AR::Filtros::action_link_button( 
-                                                                          button    => "btn btn-primary click",
-                                                                          url       => "[% url_prefix %]/admin/global/editar_novedad_intra.pl", 
-                                                                          params    =>  ["id=[% novedad.id %]"],
-                                                                          icon      => "icon-white icon-edit",
-                                                                          title     => "",
-                                                                      ) ;
-
-                                    [% END %]
-                                </td>
+                                
                             </tr>
                         [% END %]
                     </tbody>
